# Projeto-Bot-Discord-DigiClinic

./: .gitignore  CMakeLists.txt  Projeto Bot Discord DigiClinic.sln  resource.aps
Projeto Bot Discord DigiClinic/: Projeto Bot Discord DigiClinic.cpp  Projeto Bot Discord DigiClinic.vcxproj  Projeto Bot Discord DigiClinic.vcxproj.filters
include/: AICommands.h  AIHandler.h  BotCore.h  CommandHandler.h  CompraCommands.h  ConfigManager.h  DataTypes.h  DatabaseManager.h  EstoqueCommands.h  EventHandler.h  GerarPlanilhaCommand.h  LeadCommands.h  PlacaCommands.h  RelatorioCommands.h  ReportGenerator.h  SolicitacaoCommands.h  TicketCommands.h  TicketManager.h  TodoCommands.h  Utils.h  VisitasCommands.h  httplib.h
src/: AIHandler.cpp  BotCore.cpp  CommandHandler.cpp  ConfigManager.cpp  DatabaseManager.cpp  EventHandler.cpp  ReportGenerator.cpp  TicketManager.cpp  Utils.cpp  main.cpp  resource.aps
src/commands/: AICommands.cpp  CompraCommands.cpp  EstoqueCommands.cpp  GerarPlanilhaCommand.cpp  LeadCommands.cpp  PlacaCommands.cpp  RelatorioCommands.cpp  SolicitacaoCommands.cpp  TicketCommands.cpp  TodoCommands.cpp  VisitasCommands.cpp
